# sessions-hud

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
crates/cc/: Cargo.toml
crates/cc/src/: lib.rs  main.rs
crates/sessionsd/: Cargo.toml
crates/sessionsd/src/: main.rs
docs/plans/: 2026-04-12-high-value-improvements.md
hooks/: post-event.sh
hud/: Package.swift
hud/Sources/SessionsHUD/: App.swift  AppModel.swift  EventStream.swift  Models.swift  Notifier.swift  RepoRoot.swift  SessionListView.swift  TerminalFocus.swift
packaging/: com.sessionshud.daemon.plist  install-launchd.sh  merge-hooks.sh  patch-statusline.sh  statusline-snippet.sh
