[package]
name = "cc-wrapper"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "cc"
path = "src/main.rs"

[dependencies]
portable-pty = "0.8"
crossterm = "0.27"
signal-hook = "0.3"
anyhow = "1"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
