[package]
name = "cc-wrapper"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "cc_wrapper"
path = "src/lib.rs"

[[bin]]
name = "cc"
path = "src/bin/cc.rs"

[[bin]]
name = "cx"
path = "src/bin/cx.rs"

[dependencies]
portable-pty = "0.8"
crossterm = "0.27"
signal-hook = "0.3"
anyhow = "1"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
